--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
                         <a href="" class="active">Beranda</a>
                     </li>
                     <li>
-                        <a href="D:\MAGANG atau Studi Independen Stupen Mandiri\PROJECT CAPSTONE\My Project\Website For WatsonX\projek stupen\Login.html">Login</a>
+                        <a href="project-stupen\Login.html">Login</a>
                     </li>
                     <li>
-                        <a href="D:\MAGANG atau Studi Independen Stupen Mandiri\PROJECT CAPSTONE\My Project\Website For WatsonX\projek stupen\about.html">Tentang Kami</a>
+                        <a href="project-stupen\about.html">Tentang Kami</a>
                     </li>
                 </ul>
             </nav>
