--- a/project-stupen/about.html
+++ b/project-stupen/about.html
@@ -13,7 +13,7 @@
             <h2><a href="landingpage.html" class="logoo">WatsonX | Integrated Website</a></h2>
           </div>
           <ul class="navbox">
-            <li><a href="D:\MAGANG atau Studi Independen Stupen Mandiri\PROJECT CAPSTONE\My Project\Website For WatsonX\responsive project\index.html">Beranda</a></li>
+            <li><a href="pixel4bit.github.io/KaraWatsonX">Beranda</a></li>
             <li><a href="about.html">Tentang Kami</a></li>
             <li><a href="Galeri">Galeri</a></li>
             <li><a href="Login.html" class="login">Login</a></li>
