--- a/project-stupen/about.html
+++ b/project-stupen/about.html
@@ -15,7 +15,7 @@
           <ul class="navbox">
             <li><a href="pixel4bit.github.io/KaraWatsonX">Beranda</a></li>
             <li><a href="about.html">Tentang Kami</a></li>
-            <li><a href="Galeri">Galeri</a></li>
+            <li><a href="#">Galeri</a></li>
             <li><a href="Login.html" class="login">Login</a></li>
           </ul>
         </div>
