--- a/project-stupen/daftar-akun.html
+++ b/project-stupen/daftar-akun.html
@@ -11,10 +11,10 @@
     <nav>
         <div class="container">
           <div class="wrapper">
-            <h2><a href="landingpage.html" class="logoo">WatsonX | Integrated Website</a></h2>
+            <h2><a href="https://pixel4bit.github.io/KaraWatsonX/" class="logoo">WatsonX | Integrated Website</a></h2>
           </div>
           <ul class="navbox">
-            <li><a href="pixel4bit.github.io/KaraWatsonX">Beranda</a></li>
+            <li><a href="https://pixel4bit.github.io/KaraWatsonX/">Beranda</a></li>
             <li><a href="about.html">Tentang Kami</a></li>
             <li><a href="#">Galeri</a></li>
             <li><a href="Login.html" class="login">Login</a></li>
